--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         {% for name, value in sensors_readings.iteritems() %}
-            <li>{{ name }}: {{ value }}</li>
+            <li>{{ name }}: {{ value[0] }} {{ value[1] }}</li>
         {% end %}
     </ul>
 </body>
